# storage/api-docs/api-docs.json
@@ -380,7 +380,12 @@
                             }
                         }
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         },
         "/api/patients/{id}/calls": {
@@ -2023,6 +2028,37 @@
                     "description": {
                         "description": "Descripcion de la alarma",
                         "type": "string"
+                    }
+                },
+                "type": "object"
+            },
+            "CallResource": {
+                "title": "Call Resource",
+                "description": "Estructura de datos de una llamada desde el recurso",
+                "properties": {
+                    "id": {
+                        "type": "integer",
+                        "example": 1
+                    },
+                    "user_id": {
+                        "description": "ID del usuario asociado a la llamada",
+                        "type": "integer",
+                        "example": 5
+                    },
+                    "status": {
+                        "description": "Estado de la llamada",
+                        "type": "string",
+                        "example": "completed"
+                    },
+                    "created_at": {
+                        "type": "string",
+                        "format": "date-time",
+                        "example": "2024-02-19T12:34:56Z"
+                    },
+                    "updated_at": {
+                        "type": "string",
+                        "format": "date-time",
+                        "example": "2024-02-19T12:34:56Z"
                     }
                 },
                 "type": "object"
